--- a/get_sound.html
+++ b/get_sound.html
@@ -87,6 +87,7 @@
         $(document).ready(function() {
           for(x in data.notes) {
             console.log(x);
+            console.log(1);
           }
         });
       });
