--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       $.getJSON("notes.json", function(data) {
         $(document).ready(function() {
           for(x in data.notes) {
-            console.log(x);
+            console.log(data.notes[x]);
           }
         });
       });
