--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         $(document).ready(function() {
           for(x in data.notes) {
             console.log(data.notes[x]);
+            console.log(x);
           }
         });
       });
