--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       $.getJSON("notes.json", function(data) {
         $(document).ready(function() {
           for(x in data.notes) {
-            if(frequency === data.notes[x]) {
+            if(frequency === x) {
               text.innerHTML = x +' '+ data.notes[x];
             } else {
               text.innerHTML = 0 + 'HZ';
