--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       cycles = cross / 2;
       frequency = cycles / epoch;
 
+      console.log(frequency);
       $.getJSON("notes.json", function(data) {
         $(document).ready(function() {
           for(x in data.notes) {
