--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       frequency = cycles / epoch;
 
       console.log(Number(frequency).toFixed(1));
+
       $.getJSON("notes.json", function(data) {
         $(document).ready(function() {
           for(x in data.notes) {
-            console.log(data.notes[x]);
-            if(Number(frequency).toFixed(1) == data.notes[x]) {
+            if(Number(frequency).toFixed(1).toString == data.notes[x]) {
               text.innerHTML = x +' '+ frequency;
             } else {
               text.innerHTML = 0 + 'HZ';
