--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       var context = new AudioContext({ latencyHint: 'interactive'});
 
       var compress = context.createDynamicsCompressor();
-      compress.threshold.value = -30;
+      compress.threshold.value = -60;
 
-      var filter = context.createBiquadFilter();
+      /*var filter = context.createBiquadFilter();
       filter.type = "bandpass";
-      filter.frequency.value = 1650;
+      filter.frequency.value = 1650;*/
 
       var source = context.createMediaStreamSource(stream);
       var processor = context.createScriptProcessor(4096, 1, 1);
