--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         if(buffer.length === 40960) {
 
           pitch_calc(buffer, buffer.length, e.inputBuffer.sampleRate);
+          buffer = [];
         }
       };
 
@@ -51,7 +52,10 @@
     //fill a big buffer, the bigger the buffer the more accurate the detection
 
     function create_buff(samples, size) {
-      buffer.push(samples);
+
+      for (var i = 0; i < size - 1; i++) {
+        buffer.push(samples[i]);
+      }
 
       return buffer;
     }
