--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
 
       processor.onaudioprocess = function(e) {
 
-        create_buff(e.inputBuffer.getChannelData(0), e.inputBuffer.length);
+        create_buff(e.inputBuffer.getChannelData(0, 1), e.inputBuffer.length);
 
         if(buffer.length === 40960) {
+
           pitch_calc(buffer, buffer.length, e.inputBuffer.sampleRate);
         }
         buffer = [];
       };
+
+
     //fill a big buffer, the bigger the buffer the more accurate the detection
 
     function create_buff(samples, size) {
