--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       var context = new AudioContext();
 
       var source = context.createMediaStreamSource(stream);
-      var processor = context.createScriptProcessor(1024, 1, 1);
+      var processor = context.createScriptProcessor(4096, 1, 1);
 
       var buffer = [];
 
@@ -36,12 +36,12 @@
 
       processor.onaudioprocess = function(e) {
 
-        create_buff(e.inputBuffer.getChannelData(0), e.inputBuffer.length);
+        create_buff(e.inputBuffer.getChannelData(0, 1), e.inputBuffer.length);
 
         if(buffer.length === 40960) {
           pitch_calc(buffer, buffer.length, e.inputBuffer.sampleRate);
+          buffer.length = 0;
         }
-        //buffer = [];
       };
 
 
@@ -49,7 +49,7 @@
 
     function create_buff(samples, size) {
 
-      for (var i = 0; i < size - 1; i++) {
+      for (var i = 0; i < size; i++) {
         buffer.push(samples[i]);
       }
 
