--- a/index.html
+++ b/index.html
@@ -36,16 +36,13 @@
 
       processor.onaudioprocess = function(e) {
 
-        create_buff(e.inputBuffer.getChannelData(0, 1), e.inputBuffer.length);
+        if(e.inputBuffer.getChannelData(0) > 0.01 || e.inputBuffer.getChannelData(0) < -0.0001) {
+          create_buff(e.inputBuffer.getChannelData(0), e.inputBuffer.length);
+        }
 
         if(buffer.length === 40960) {
-          if(buffer[0] > 0.01 && buffer[0] < -0.01) {
-            pitch_calc(buffer, buffer.length, e.inputBuffer.sampleRate);
-            buffer.length = 0;
-          } else {
-            text.innerHTML = 0 + " HZ";
-          }
-
+          pitch_calc(buffer, buffer.length, e.inputBuffer.sampleRate);
+          buffer.length = 0;
         }
       };
 
