--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         if(buffer.length === 40960) {
 
           low_pass(buffer, buffer.length);
+          low_pass(output, output.length);
           pitch_calc(output, output.length, e.inputBuffer.sampleRate);
 
           buffer.length = 0;
